# Pertinho-api

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_revisao_inicial.py  0002_cria_children.py  0003_cria_bracelets.py
app/: config.py  database.py  main.py
app/models/: __init__.py  bracelet.py  child.py
app/services/: bracelet_activation.py  bracelet_loss.py  bracelet_replacement.py
docs/: PROJECT_CONTEXT.md
docs/superpowers/plans/: 2026-07-13-health-check.md  2026-07-14-alembic-async.md  2026-07-14-bracelet-model.md  2026-07-14-child-model.md  2026-07-15-bracelet-transitions.md  2026-07-17-bracelet-activation-service.md  2026-07-23-bracelet-loss-service.md  2026-07-23-bracelet-replacement-service.md
docs/superpowers/specs/: 2026-07-13-health-check-design.md  2026-07-14-alembic-async-design.md  2026-07-14-bracelet-model-design.md  2026-07-14-child-model-design.md  2026-07-15-bracelet-transitions-design.md  2026-07-17-bracelet-activation-service-design.md  2026-07-17-bracelet-loss-service-design.md  2026-07-23-bracelet-replacement-service-design.md
tests/: conftest.py  test_bracelet_activation_service.py  test_bracelet_database.py  test_bracelet_loss_service.py  test_bracelet_model.py  test_bracelet_replacement_service.py  test_bracelet_transitions.py  test_child_model.py  test_config.py  test_database.py  test_health.py  test_migrations.py
